// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposal Modal onVote enables voting if the proposal is on the 'VotingPeriod' 1`] = `
<tmpage-stub loaderpath="" emptytitle="No data" emptysubtitle="" data-title="Proposal" class="readable-width">
  <div class="proposal">
    <div class="page-profile__header__info"><span class="proposal-status votingperiod">
          Voting Period
        </span>
      <div class="proposal-title__row">
        <h2 class="proposal-title">test</h2>
      </div>
    </div>
    <div class="proposer-row">
      <p class="proposer">
        Proposed by Big Daddy Validator:
        <address-stub address="cosmos1z8mzakma7vnaajysmtkwt4wgjqr2m84tzvyfkz" tooltiptext=""></address-stub>
      </p>
      <div class="button-container">
        <tmbtn-stub value="Deposit" disabled="true" customclass="" id="deposit-btn" color="primary"></tmbtn-stub>
        <tmbtn-stub value="Vote" customclass="" id="vote-btn" color="primary"></tmbtn-stub>
      </div>
    </div>
  </div>
  <textblock-stub content="test"></textblock-stub>
  <!---->
  <ul class="row">
    <li>
      <h4>Total Vote Count</h4> <span>
          0.00% /
          0
        </span>
    </li>
    <li>
      <h4>Yes</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>No</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Veto</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Abstain</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
  </ul>
  <ul class="row">
    <li>
      <h4>Proposal ID</h4> <span>33</span>
    </li>
    <li>
      <h4>Submitted</h4> <span>August 23rd 2019, 08:46</span>
    </li>
    <li>
      <h4>(Voting Period) Start Date</h4> <span>August 25th 2019, 08:46</span>
    </li>
    <li>
      <h4>(Voting Period) End Date</h4> <span>
            August 25th 2019, 08:46 /
            in 50 years
          </span>
    </li>
  </ul>
  <!---->
  <modalvote-stub proposalid="33" proposaltitle="test"></modalvote-stub>
</tmpage-stub>
`;

exports[`PageProposal Modal onVote shows the last valid vote 1`] = `
<tmpage-stub loaderpath="" emptytitle="No data" emptysubtitle="" data-title="Proposal" class="readable-width">
  <div class="proposal">
    <div class="page-profile__header__info"><span class="proposal-status rejected">
          Rejected
        </span>
      <div class="proposal-title__row">
        <h2 class="proposal-title">test</h2>
      </div>
    </div>
    <div class="proposer-row">
      <p class="proposer">
        Proposed by Big Daddy Validator:
        <address-stub address="cosmos1z8mzakma7vnaajysmtkwt4wgjqr2m84tzvyfkz" tooltiptext=""></address-stub>
      </p>
      <div class="button-container">
        <tmbtn-stub value="Deposit" disabled="true" customclass="" id="deposit-btn" color="primary"></tmbtn-stub>
        <tmbtn-stub value="Vote" disabled="true" customclass="" id="vote-btn" color="primary"></tmbtn-stub>
      </div>
    </div>
  </div>
  <textblock-stub content="test"></textblock-stub>
  <!---->
  <ul class="row">
    <!---->
    <li>
      <h4>Yes</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>No</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Veto</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
    <li>
      <h4>Abstain</h4> <span>
          0.00%
          /
          0
        </span>
    </li>
  </ul>
  <ul class="row">
    <li>
      <h4>Proposal ID</h4> <span>33</span>
    </li>
    <li>
      <h4>Submitted</h4> <span>August 23rd 2019, 08:46</span>
    </li>
    <li>
      <h4>Proposal Finalized (Rejected)</h4> <span>August 25th 2019, 08:46</span>
    </li>
  </ul>
  <!---->
  <modalvote-stub proposalid="33" proposaltitle="test" lastvoteoption="Yes"></modalvote-stub>
</tmpage-stub>
`;

exports[`PageProposal should show a loader if the necessary data hasen't been loaded 1`] = `
<tmpage-stub
  class="readable-width"
  data-title="Proposal"
  emptysubtitle=""
  emptytitle="No data"
  loaderpath=""
  loading="true"
>
  <div
    class="proposal"
  >
    <div
      class="page-profile__header__info"
    >
      <span
        class="proposal-status rejected"
      >
        
          Rejected
        
      </span>
       
      <div
        class="proposal-title__row"
      >
        <h2
          class="proposal-title"
        >
          test
        </h2>
      </div>
    </div>
     
    <div
      class="proposer-row"
    >
      <p
        class="proposer"
      >
        
            Proposed by Big Daddy Validator:
            
        <address-stub
          address="cosmos1z8mzakma7vnaajysmtkwt4wgjqr2m84tzvyfkz"
          tooltiptext=""
        />
      </p>
       
      <div
        class="button-container"
      >
        <tmbtn-stub
          color="primary"
          customclass=""
          disabled="true"
          id="deposit-btn"
          value="Deposit"
        />
         
        <tmbtn-stub
          color="primary"
          customclass=""
          disabled="true"
          id="vote-btn"
          value="Vote"
        />
      </div>
    </div>
  </div>
   
  <textblock-stub
    content="test"
  />
   
  <!---->
   
  <ul
    class="row"
  >
    <!---->
     
    <li>
      <h4>
        Yes
      </h4>
       
      <span>
        
          0.00%
          /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        No
      </h4>
       
      <span>
        
          0.00%
          /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        Veto
      </h4>
       
      <span>
        
          0.00%
          /
          0
        
      </span>
    </li>
     
    <li>
      <h4>
        Abstain
      </h4>
       
      <span>
        
          0.00%
          /
          0
        
      </span>
    </li>
  </ul>
   
  <ul
    class="row"
  >
    <li>
      <h4>
        Proposal ID
      </h4>
       
      <span>
        33
      </span>
    </li>
     
    <li>
      <h4>
        Submitted
      </h4>
       
      <span>
        August 23rd 2019, 08:46
      </span>
    </li>
     
    <li>
      <h4>
        Proposal Finalized (Rejected)
      </h4>
       
      <span>
        August 25th 2019, 08:46
      </span>
    </li>
  </ul>
   
  <!---->
   
  <modalvote-stub
    proposalid="33"
    proposaltitle="test"
  />
</tmpage-stub>
`;

exports[`PageProposal shows an error if the proposal couldn't be found 1`] = `
<tmpage-stub
  class="readable-width"
  data-title="Proposal"
  emptysubtitle=""
  emptytitle="No data"
  loaderpath=""
>
  <tmdatanotfound-stub />
</tmpage-stub>
`;
